third_party/move/move-compiler-v2/tests/checking/typing/v1-commands/assign_wrong_type.exp

Diagnostics:
error: cannot assign `bool` to left-hand side of type `u64`
  ┌─ tests/checking/typing/v1-commands/assign_wrong_type.move:6:5
  │
6 │     x = false
  │     ^
